[package]
name = "bee2-rs"
version = "0.1.0"
authors = ["MD-Levitan <ovsyanka@protonmail.com>", ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bee2_bash = { path = "bee2_bash", version = "" }
bee2_belt = { path = "bee2_belt", version = "" }
bee2_traits = { path = "bee2_traits", version = "" }