[package]
name = "bee2_bash"
version = "0.1.0"
authors = ["MD-Levitan <ovsyanka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bee2_traits = { path = "../bee2_traits", version = "" }
rand = ""
generic-array = "0.14"

[dev-dependencies]
criterion_bencher_compat = "0.3"

[[bench]]
name = "bee2_bash"
path = "benches/lib.rs"
harness = false


[features]
go-faster = []