[package]
name = "bee2_bash"
version = "0.1.0"
authors = ["MD-Levitan <ovsyanka@protonmail.com>"]
edition = "2018"
keywords = ["crypto", "bee2", "hash", "digest", "bash"]
categories = ["cryptography", "no-std"]

[dependencies]
bee2_traits = { path = "../bee2_traits", version = "" }
rand = ""
generic-array = "0.14"
digest = {version = "0.9", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bee2_bash"
path = "benches/lib.rs"
harness = false


[features]
default = []
go-faster = []
rust-crypto =["digest"]
